Fix invalid vertical-align in stylesheet

--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -591,7 +591,7 @@ hr {
 }
 
 #user_list tr {
-  vertical-align: center;
+  vertical-align: middle;
 }
 
 #user_list p {
